# learningc

./: CMakeLists.txt  Hello.c  main2.c
chapter10/: 10erec_5.c  10erec_6.c  10exec_1.c  10exec_10.c  10exec_11.c  10exec_12.c  10exec_13.c  10exec_14.c  10exec_2.c  10exec_3.c  10exec_4.c  10exec_7.c  10exec_8.c  10exec_9.c  10r_1.c  10r_4.c  arf.c  array2d.c  bounds.c  day_mon2.c  day_mon3.c  designate.c  flc.c  order.c  ptr_ops.c  r10_12.c  r10_13.c  r10_8.c  rain.c  sum_arr1.c  sum_arr2.c  vararr2d.c  zippol.c
chapter11/: 11exec_1.c  11exec_10.c  11exec_11.c  11exec_12.c  11exec_13.c  11exec_14.c  11exec_15.c  11exec_16.c  11exec_2.c  11exec_3.c  11exec_4.c  11exec_5.c  11exec_6.c  11exec_7.c  11exec_8.c  11exec_9.c  11r_10.c  11r_12.c  11r_13.c  11r_2.c  11r_3.c  11r_4.c  11r_5.c  11r_7.c  11r_8.c  addresses.c  arrchar.c  compare.c  compback.c  copy1.c  copy2.c  copy3.c  fgets1.c  fgets2.c  fgets3.c  format.c  function_impl.c  functions.h  getsputs.c  hello.c  (+21 more)
chapter12/: 12r_5.c  addaword.c  append.c  count.c  d_drive1.c  diceroll.c  diceroll.h  dyn_arr.c  forc99.c  global.c  hiding.c  loc_stat.c  manydice.c  parta.c  partb.c  r_driver.c  rand0.c  randbin.c  reducto.c  reverse.c  s_and_r.c  where.c
chapter13/: book.c  booksave.c  friends.c
chapter14/: 14r_9.c  booksave.c  enum.c  friend.c  func_ptr.c  functions.c  manybooks.c
chapter15/: dualview.c  fields.c
chapter16/: 16r_11.c  16r_4.c  16r_5.c  16r_6.c  16r_7.c  16r_8.c  16r_9.c  assert.c  byebye.c  doubincl.c  glue.c  ifdef.c  mac_arg.c  mems.c  mytype.c  names.h  preproc.c  qsorter.c  rect_pol.c  statasrt.c  subst.c  varargs.c  variadic.c
chapter17/: film3.c  films1.c  films2.c  list.c  list.h  mall.c  queue.c  queue.h  tree.h  use_q.c
chapter2/: Exercise1.c  Exercise2.c  Exercise4.c  Exercise5.c  Exercise6.c  Exercise7.c  Exercise8.c  first.c  two_func.c
chapter3/: altnames.c  badcount.c  escape.c  exec1.c  exec5.c  exec_2.c  exec_3.c  exec_4.c  exec_5.c  exec_6.c  exec_7.c  exec_8.c  floaterr.c  platinum.c  showf_pt.c  tooLittle.c  typesize.c
chapter4/: defines.c  floatcnv.c  floats.c  input.c  intconv.c  longstrg.c  m_printConstant.c  m_testInput.c  pizza.c  praise2.c  praisel.c  printout.c  prntval.c  r_12.c  r_2.c  r_5.c  r_6d.c  skip2.c  talkback.c  varwid.c  width.c
chapter5/: 5exec_2.c  5exec_3.c  5exec_4.c  5exec_5.c  5exec_6.c  5exec_7.c  5exec_8.c  5exec_9.c  5r_2.c  5r_5.c  5r_6.c  add_one.c  addemup.c  convert.c  divide.c  exec1.c  golf.c  m_test.c  m_test_other_way_cal_mod.c  min_sec.c  post_pre.c  pound.c  r5_7.c  r5_9.c  r_2.c  running.c  shoes2.c  sizeof.c  squares.c  wheat.c
chapter6/: 6exec_1.c  6exec_10.c  6exec_11.c  6exec_12.c  6exec_15.c  6exec_16.c  6exec_17.c  6exec_18.c  6exec_2.c  6exec_3.c  6exec_4.c  6exec_5.c  6exec_6.c  6exec_7.c  6exec_8.c  6r_11.c  6r_14.c  6r_2.c  6r_5.c  6r_7.c  6r_7b.c  6r_8a.c  6r_8b.c  6r_8c.c  6r_8d.c  6r_9.c  boolean.c  cmpflt.c  cypher2.c  do_while.c  electric.c  for_cube.c  power.c  r6_6.c  scores_in.c  summing.c  sweetie2.c  trouble.c  truth.c  zeno.c
chapter7/: 7exec_1.c  7exec_10.c  7exec_11.c  7exec_2.c  7exec_3.c  7exec_4.c  7exec_5.c  7exec_6.c  7exec_7.c  7exec_8.c  7exec_9.c  7r_10.c  7r_3.c  7r_5.c  7r_6.c  7r_8.c  7r_9.c  animals.c  break.c  chcount.c  chcount.s  colddays.c  cypher1.c  divisors.c  paint.c  wordcnt.c
chapter8/: 8exec_2.c  8exec_3.c  8exec_4.c  8exec_5.c  8exec_8.c  8exercise_6.c  8exercise_7.c  8r_1.c  8r_2.c  8r_3.c  8r_6b.c  checking.c  menuette.c  showchar2.c
chapter9/: 9exec_10.c  9exec_11.c  9exec_8.c  9exec_9.c  9exer_1.c  9exer_2.c  9exer_3.c  9exer_4.c  9exer_6.c  9exer_7.c  9exercise_5.c  9r_3.c  9r_4.c  9r_6.c  9r_9.c  binary.c  factor.c  functions.c  hotel.c  hotel.h  lesser.c  lethead1.c  lethead2.c  loccheck.c  r9_8.c  swap1.c  swap3.c  usehotel.c
learning/: first.c
learning/chapter3/: bases.c  charcode.c  demo_page51.c  demo_page53.c  exec2.c  exec3.c  exec4.c  exec5.c  exec6.c  exec7.c  exer1.c  print1.c  print2.c  toobig.c
learning/chapter6/: 6exec_13.c  6exec_14.c  6exec_15.c
learning/chapter8/: echo_eof.c  guess.c  guess_modified.c  showchar1.c
learning/test/: test.c
test/: a.c  a.h  test.c  test2.c
tests/: Do.c  file3.c  functions.h  lol_test.c  restrictTest.c  test1.c  test2.c  test_file3.c
