# cmake_minimum_required(VERSION <specify CMake version here>)
project(Learning)

set(CMAKE_CXX_STANDARD 14)



add_executable(Exercise1 chapter2/Exercise1.c)
add_executable(11r_13 chapter11/11r_13.c chapter11/function_impl.c)
add_executable(test1 tests/test1.c)
add_executable(11exec_1 chapter11/11exec_1.c)
add_executable(11exec_2 chapter11/11exec_2.c)
add_executable(11exec_3 chapter11/11exec_3.c)
add_executable(11exec_4 chapter11/11exec_4.c)
add_executable(11exec_5 chapter11/11exec_5.c)
add_executable(11exec_6 chapter11/11exec_6.c)
add_executable(11exec_7 chapter11/11exec_7.c)
add_executable(11exec_8 chapter11/11exec_8.c)
add_executable(11exec_9 chapter11/11exec_9.c)
add_executable(11exec_11 chapter11/11exec_11.c)
add_executable(11exec_10 chapter11/11exec_10.c)
add_executable(11exec_12 chapter11/11exec_12.c)
add_executable(11exec_13 chapter11/11exec_13.c)
add_executable(11exec_14 chapter11/11exec_14.c)
add_executable(11exec_15 chapter11/11exec_15.c)
add_executable(11exec_16 chapter11/11exec_16.c)