# cmake_minimum_required(VERSION <specify CMake version here>)
project(Learning)

set(CMAKE_CXX_STANDARD 14)



add_executable(Exercise1 chapter2/Exercise1.c)
add_executable(11r_13 chapter11/11r_13.c chapter11/function_impl.c)
add_executable(test1 tests/test1.c)
add_executable(11exec_1 chapter11/11exec_1.c)
add_executable(11exec_2 chapter11/11exec_2.c)
add_executable(11exec_3 chapter11/11exec_3.c)
add_executable(11exec_4 chapter11/11exec_4.c)
add_executable(11exec_5 chapter11/11exec_5.c)
add_executable(11exec_6 chapter11/11exec_6.c)
add_executable(11exec_7 chapter11/11exec_7.c)
add_executable(11exec_8 chapter11/11exec_8.c)
add_executable(11exec_9 chapter11/11exec_9.c)
add_executable(11exec_11 chapter11/11exec_11.c)
add_executable(11exec_10 chapter11/11exec_10.c)
add_executable(11exec_12 chapter11/11exec_12.c)
add_executable(11exec_13 chapter11/11exec_13.c)
add_executable(11exec_14 chapter11/11exec_14.c)
add_executable(11exec_15 chapter11/11exec_15.c)
add_executable(11exec_16 chapter11/11exec_16.c)
add_executable(hiding chapter12/hiding.c)
add_executable(forc99 chapter12/forc99.c)
add_executable(loc_stat chapter12/loc_stat.c)
add_executable(global chapter12/global.c)
add_executable(parta chapter12/parta.c chapter12/partb.c)
add_executable(rand0 chapter12/rand0.c chapter12/r_driver.c)
add_executable(s_and_r chapter12/s_and_r.c chapter12/d_drive1.c)
add_executable(diceroll chapter12/diceroll.c)
add_executable(manydice chapter12/manydice.c chapter12/diceroll.c)
add_executable(dyn_arr chapter12/dyn_arr.c)
add_executable(where chapter12/where.c)
add_executable(restrictTest tests/restrictTest.c)
add_executable(count chapter12/count.c)
add_executable(reducto chapter12/reducto.c)
add_executable(addaword chapter12/addaword.c)
add_executable(reverse chapter12/reverse.c)