# cmake_minimum_required(VERSION <specify CMake version here>)
project(Learning)

set(CMAKE_CXX_STANDARD 14)



add_executable(Exercise1 chapter2/Exercise1.c)
add_executable(11r_13 chapter11/11r_13.c chapter11/function_impl.c)
add_executable(test1 tests/test1.c tests/test2.c)
add_executable(11exec_1 chapter11/11exec_1.c)
add_executable(11exec_2 chapter11/11exec_2.c)
add_executable(11exec_3 chapter11/11exec_3.c)
add_executable(11exec_4 chapter11/11exec_4.c)
add_executable(11exec_5 chapter11/11exec_5.c)
add_executable(11exec_6 chapter11/11exec_6.c)
add_executable(11exec_7 chapter11/11exec_7.c)
add_executable(11exec_8 chapter11/11exec_8.c)
add_executable(11exec_9 chapter11/11exec_9.c)
add_executable(11exec_11 chapter11/11exec_11.c)
add_executable(11exec_10 chapter11/11exec_10.c)
add_executable(11exec_12 chapter11/11exec_12.c)
add_executable(11exec_13 chapter11/11exec_13.c)
add_executable(11exec_14 chapter11/11exec_14.c)
add_executable(11exec_15 chapter11/11exec_15.c)
add_executable(11exec_16 chapter11/11exec_16.c)
add_executable(hiding chapter12/hiding.c)
add_executable(forc99 chapter12/forc99.c)
add_executable(loc_stat chapter12/loc_stat.c)
add_executable(global chapter12/global.c)
add_executable(parta chapter12/parta.c chapter12/partb.c)
add_executable(rand0 chapter12/rand0.c chapter12/r_driver.c)
add_executable(s_and_r chapter12/s_and_r.c chapter12/d_drive1.c)
add_executable(diceroll chapter12/diceroll.c)
add_executable(manydice chapter12/manydice.c chapter12/diceroll.c)
add_executable(dyn_arr chapter12/dyn_arr.c)
add_executable(where chapter12/where.c)
add_executable(restrictTest tests/restrictTest.c)
add_executable(count chapter12/count.c)
add_executable(reducto chapter12/reducto.c)
add_executable(addaword chapter12/addaword.c)
add_executable(reverse chapter12/reverse.c)
add_executable(append chapter12/append.c)
add_executable(randbin chapter12/randbin.c)
add_executable(12r_5 chapter12/12r_5.c)
add_executable(book chapter14/book.c)
add_executable(manybooks chapter14/manybooks.c chapter14/functions.c)
add_executable(friend chapter14/friend.c)
add_executable(friends chapter14/friends.c)
add_executable(booksave chapter14/booksave.c chapter14/functions.c)
add_executable(enum chapter14/enum.c chapter14/functions.c)
add_executable(func_ptr chapter14/func_ptr.c chapter14/functions.c)
add_executable(14r_9 chapter14/14r_9.c)
add_executable(fields chapter15/fields.c)
add_executable(dualview chapter15/dualview.c)
add_executable(preproc chapter16/preproc.c)
add_executable(mac_arg chapter16/mac_arg.c)
add_executable(subst chapter16/subst.c)
add_executable(glue chapter16/glue.c)
add_executable(variadic chapter16/variadic.c)
add_executable(ifdef chapter16/ifdef.c)
add_executable(doubincl chapter16/doubincl.c)
add_executable(mytype chapter16/mytype.c)
add_executable(test2 tests/test2.c)
add_executable(rect_pol chapter16/rect_pol.c)
add_executable(byebye chapter16/byebye.c)
add_executable(qsorter chapter16/qsorter.c)
add_executable(assert chapter16/assert.c)
add_executable(statasrt chapter16/statasrt.c)
add_executable(mems chapter16/mems.c)
add_executable(varargs chapter16/varargs.c)
add_executable(16r_4 chapter16/16r_4.c)
add_executable(16r_5 chapter16/16r_5.c)
add_executable(16r_6 chapter16/16r_6.c)
add_executable(16r_7 chapter16/16r_7.c)
add_executable(16r_8 chapter16/16r_8.c)
add_executable(16r_9 chapter16/16r_9.c)
add_executable(16r_11 chapter16/16r_11.c)
add_executable(file3 tests/file3.c)
add_executable(test_file3 tests/test_file3.c tests/file3.c)